long filenames now get clipped correctly in most places on the site
extra super-special rockstar thanks to Paulymer for this one, I was totally stumped.

git-svn-id: http://abadthing.com/tmbo/trunk@260 7ced0b6d-2a13-0410-a4a2-c2825b4e6d43

--- a/web/styles/oldskool.css
+++ b/web/styles/oldskool.css
@@ -144,6 +144,10 @@ table.thumbnails td {
 	background: #ccccff;
 }
 
+.my_hof {
+	background: #aaaadd;
+}
+
 .weeks_0, .weeks_1, .weeks_2 {
 	color:#660000;
 }
